Alerts visibility fixed, nicer touch

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -6,10 +6,14 @@
   margin: 0;
   text-align: center;
   color: white;
+  border: none;
+  font-weight: lighter;
 }
 .alert-info {
   background: $green;
+  background: linear-gradient(to right, #90ffff, #000000);
 }
 .alert-warning {
   background: $red;
+  background: linear-gradient(to right, #2b2424, #da0266);
 }
